fix counting total files and total partitions